<resources>
    <string name="app_name">Stress Management App</string>
    <string name="username_login">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="name">Name</string>
    <string name="email_id">Email id</string>
    <string name="password_register">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="username_register">Username</string>
    <string name="are_you_a_caregiver">Are you a caregiver?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>