<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUp">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/graphics2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/sign_up_graphics"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/guideline_register"
        app:layout_constraintGuide_percent="0.30"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/graphics2"
        app:layout_constraintLeft_toLeftOf="@id/guideline_register"/>

    <EditText
        android:id="@+id/etName"
        android:layout_marginTop="5dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintLeft_toLeftOf="@id/guideline_register"/>

    <TextView
        android:id="@+id/tvUsername"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_register"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintLeft_toLeftOf="@id/guideline_register"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_marginTop="5dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvUsername"
        app:layout_constraintLeft_toLeftOf="@id/guideline_register"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_id"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintLeft_toLeftOf="@id/guideline_register"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_marginTop="5dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:layout_constraintLeft_toLeftOf="@id/guideline_register"/>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_register"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintLeft_toLeftOf="@id/guideline_register"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_marginTop="5dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        app:layout_constraintLeft_toLeftOf="@id/guideline_register"/>

    <TextView
        android:id="@+id/tvConfirmPassword"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintLeft_toLeftOf="@id/guideline_register"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_marginTop="5dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmPassword"
        app:layout_constraintLeft_toLeftOf="@id/guideline_register"/>

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Gender"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
        app:layout_constraintLeft_toLeftOf="@id/guideline_register"/>

    <RadioGroup
        android:id="@+id/radio_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline_register"
        app:layout_constraintTop_toBottomOf="@id/gender">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Others"/>
    </RadioGroup>

    <CheckBox
        android:id="@+id/caregiver_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/are_you_a_caregiver"
        app:layout_constraintTop_toBottomOf="@id/radio_gender"
        app:layout_constraintLeft_toLeftOf="@id/guideline_register"/>

    <TextView
        android:id="@+id/linkToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Already have an account? Login."
        android:textColor="#636365"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/caregiver_checkbox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:paddingHorizontal="50dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:backgroundTint="#ABD9FF"
        app:layout_constraintTop_toBottomOf="@id/linkToLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>